feat: redirecionar rotas e estilização adicional

--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -23,6 +23,14 @@ body {
   text-align: center;
 }
 
+.TaskWrapper h1 {
+  font-size: 2rem;
+  color: #333;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .TaskForm {
   display: flex;
   gap: 10px;
@@ -208,4 +216,40 @@ body {
 
 .close-botao:hover {
   background: #c0392b;
+}
+
+.login-container {
+  max-width: 350px;
+  margin: 100px auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.login-container h2 {
+  margin-bottom: 20px;
+}
+
+.login-container input {
+  width: 100%;
+  padding: 10px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.login-container button {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.login-container button:hover {
+  background-color: #0056b3;
 }
